--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
     />
   </head>
   <body>
+    <!-- just added to check git clone and push -->
+    <h1>Hi</h1>
     <app-root></app-root>
   </body>
 </html>
